# discrimenum

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: main.rs
